--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Import AOS CSS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     
-    <title>React App</title>
+    <title>Riccardo Andria - Web Developer</title>
   </head>
   <body>
     <div id="root"></div>
